--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicons/favicon-16x16.png">
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicons/favicon.ico">
     <link rel="manifest" href="assets/img/favicons/manifest.json">
+    <link rel="stylesheet" href="/public/assets/css/theme.css">
     <meta name="msapplication-TileImage" content="assets/img/favicons/mstile-150x150.png">
     <meta name="theme-color" content="#ffffff">
 
@@ -46,7 +47,7 @@
             <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base">
               <li class="nav-item px-2"><a class="nav-link" aria-current="page" href="index.html">Home</a></li>
               <li class="nav-item px-2"><a class="nav-link" href="#services">Our Services</a></li>
-              <li class="nav-item px-2"><a class="nav-link" href="/public/track.html">Track</a></li>
+              <li class="nav-item px-2"><a class="nav-link" href="/track.html">Track</a></li>
               <li class="nav-item px-2"><a class="nav-link" href="#findUs">Find Us</a></li>
             </ul>
             <div class="dropdown d-none d-lg-block">
@@ -71,7 +72,7 @@
 
         <div class="container">
           <div class="row align-items-center">
-            <div class="col-md-5 col-xl-6 col-xxl-7 order-0 order-md-1 text-end"><img class="pt-7 pt-md-0 w-100" src="assets/img/illustrations/hero.png" alt="hero-header" /></div>
+            <div class="col-md-5 col-xl-6 col-xxl-7 order-0 order-md-1 text-end"><img class="pt-7 pt-md-0 w-100" src="/public/assets/img/illustrations/hero.png" alt="hero-header" /></div>
             <div class="col-md-75 col-xl-6 col-xxl-5 text-md-start text-center py-8">
               <h1 class="fw-normal fs-6 fs-xxl-7">A trusted provider of </h1>
               <h1 class="fw-bolder fs-6 fs-xxl-7 mb-2">courier services.</h1>
@@ -97,7 +98,7 @@
             <div class="col-md-4 pt-4 px-md-2 px-lg-3">
               <div class="card h-100 px-lg-5 card-span">
                 <div class="card-body d-flex flex-column justify-content-around">
-                  <div class="text-center pt-5"><img class="img-fluid" src="assets/img/icons/services-1.svg" alt="..." />
+                  <div class="text-center pt-5"><img class="img-fluid" src="/public/assets/img/icons/services-1.svg" alt="..." />
                     <h5 class="my-4">Business Services</h5>
                   </div>
                   <p>Offering home delivery around the city, where your products will be at your doorstep within 48-72 hours.</p>
@@ -120,7 +121,7 @@
             <div class="col-md-4 pt-4 px-md-2 px-lg-3">
               <div class="card h-100 px-lg-5 card-span">
                 <div class="card-body d-flex flex-column justify-content-around">
-                  <div class="text-center pt-5"><img class="img-fluid" src="assets/img/icons/services-2.svg" alt="..." />
+                  <div class="text-center pt-5"><img class="img-fluid" src="/public/assets/img/icons/services-2.svg" alt="..." />
                     <h5 class="my-4">International Delivery</h5>
                   </div>
                   <p>Offering International delivery accross differnt country, where your products will be at your doorstep within 48-72 hours.</p>
@@ -143,7 +144,7 @@
             <div class="col-md-4 pt-4 px-md-2 px-lg-3">
               <div class="card h-100 px-lg-5 card-span">
                 <div class="card-body d-flex flex-column justify-content-around">
-                  <div class="text-center pt-5"><img class="img-fluid" src="assets/img/icons/services-3.svg" alt="..." />
+                  <div class="text-center pt-5"><img class="img-fluid" src="/public/assets/img/icons/services-3.svg" alt="..." />
                     <h5 class="my-4">Personal Services</h5>
                   </div>
                   <p>You can trust us to safely deliver your most sensitive documents to the specific area in a short time.</p>
