--- a/index.html
+++ b/index.html
@@ -182,31 +182,31 @@
         <div class="container">
           <div class="row">
             <div class="col-6 col-lg mb-5">
-              <div class="text-center"><img src="assets/img/icons/awards.png" alt="..." />
+              <div class="text-center"><img src="/public/assets/img/icons/awards.png" alt="..." />
                 <h1 class="text-primary mt-4">26+</h1>
                 <h5 class="text-800">Awards won</h5>
               </div>
             </div>
             <div class="col-6 col-lg mb-5">
-              <div class="text-center"><img src="assets/img/icons/states.png" alt="..." />
+              <div class="text-center"><img src="/public/assets/img/icons/states.png" alt="..." />
                 <h1 class="text-primary mt-4">65+</h1>
                 <h5 class="text-800">States covered</h5>
               </div>
             </div>
             <div class="col-6 col-lg mb-5">
-              <div class="text-center"><img src="assets/img/icons/clients.png" alt="..." />
+              <div class="text-center"><img src="/public/assets/img/icons/clients.png" alt="..." />
                 <h1 class="text-primary mt-4">689K+</h1>
                 <h5 class="text-800">Happy clients</h5>
               </div>
             </div>
             <div class="col-6 col-lg mb-5">
-              <div class="text-center"><img src="assets/img/icons/goods.png" alt="..." />
+              <div class="text-center"><img src="/public/assets/img/icons/goods.png" alt="..." />
                 <h1 class="text-primary mt-4">130M+</h1>
                 <h5 class="text-800">Goods delivered</h5>
               </div>
             </div>
             <div class="col-6 col-lg mb-5">
-              <div class="text-center"><img src="assets/img/icons/business.png" alt="..." />
+              <div class="text-center"><img src="/public/assets/img/icons/business.png" alt="..." />
                 <h1 class="text-primary mt-4">130M+</h1>
                 <h5 class="text-800">Business hours</h5>
               </div>
@@ -470,7 +470,7 @@
 
         <div class="container">
           <div class="row justify-content-center">
-            <div class="col-md-6 col-lg-5 col-xl-4"><img src="assets/img/illustrations/callback.png" alt="..." />
+            <div class="col-md-6 col-lg-5 col-xl-4"><img src="/public/assets/img/illustrations/callback.png" alt="..." />
               <h5 class="text-danger">REQUEST A CALLBACK</h5>
               <h2>We will contact in the shortest time.</h2>
               <p class="text-muted">Monday to Friday, 9am-5pm.</p>
@@ -518,7 +518,7 @@
             <div class="col-12">
               <div class="card card-span rounded-2 mb-3">
                 <div class="row">
-                  <div class="col-md-6 col-lg-7 d-flex"><img class="w-100 fit-cover rounded-md-start rounded-top rounded-md-top-0" src="assets/img/gallery/map.svg" alt="map" /></div>
+                  <div class="col-md-6 col-lg-7 d-flex"><img class="w-100 fit-cover rounded-md-start rounded-top rounded-md-top-0" src="/public/assets/img/gallery/map.svg" alt="map" /></div>
                   <div class="col-md-6 col-lg-5 d-flex flex-center">
                     <div class="card-body">
                       <h5>Contact with us</h5>
