--- a/index.html
+++ b/index.html
@@ -665,11 +665,11 @@
     <!--    JavaScripts-->
     <!-- ===============================================-->
     <script src="/public/vendors/@popperjs/popper.min.js"></script>
-    <script src="vendors/bootstrap/bootstrap.min.js"></script>
-    <script src="vendors/is/is.min.js"></script>
+    <script src="/public/vendors/bootstrap/bootstrap.min.js"></script>
+    <script src="/public/vendors/is/is.min.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=window.scroll"></script>
-    <script src="vendors/fontawesome/all.min.js"></script>
-    <script src="assets/js/theme.js"></script>
+    <script src="/public/vendors/fontawesome/all.min.js"></script>
+    <script src="/public/assets/js/theme.js"></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400;500;600;700;800&amp;display=swap" rel="stylesheet">
   </body>
