--- a/track.html
+++ b/track.html
@@ -39,7 +39,7 @@
             <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3 d-block"
                 data-navbar-on-scroll="data-navbar-on-scroll">
                 <div class="container"><a class="navbar-brand" href="index.html"><img
-                            src="/public/assets/img/logo-2.png" height="45" alt="logo" /></a>
+                            src="/public/assets/img/logo-2.png" height="45" width="80%" alt="logo" /></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon">
@@ -136,7 +136,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-12 col-sm-12 col-lg-6 mb-4 order-0 order-sm-0"><a class="text-decoration-none"
-                                href="#"><img src="/public/assets/img/logo-2.png" height="51" alt="" /></a>
+                                href="#"><img src="/public/assets/img/logo-2.png" height="51" width="80%" alt="" /></a>
                             <p class="text-500 my-4">The most trusted Courier<br />company in your area.</p>
                         </div>
                         <div class="col-6 col-sm-4 col-lg-2 mb-3 order-2 order-sm-1">
