--- a/track.html
+++ b/track.html
@@ -78,7 +78,7 @@
                 <div class="track-item">
                     <h1>TRACK ITEM</h1>
 
-                    <form id="myForm" action="/public/tracking-page.html">
+                    <form id="myForm" action="/tracking-page.html">
                         <input type="text" id="fname" name="fname" placeholder="Enter your tracking number(s)" required>
 
                         <input type="submit" id="track-btn" value="Track" disabled>
