--- a/tracking-page.html
+++ b/tracking-page.html
@@ -1,3 +1,5 @@
+<html lang="en-US" dir="ltr">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,6 +20,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicons/favicon-16x16.png">
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicons/favicon.ico">
     <link rel="manifest" href="assets/img/favicons/manifest.json">
+    <link rel="stylesheet" href="/public/assets/css/theme.css">
     <meta name="msapplication-TileImage" content="assets/img/favicons/mstile-150x150.png">
     <meta name="theme-color" content="#ffffff">
 
@@ -28,10 +31,10 @@
     <link href="assets/css/theme.css" rel="stylesheet" />
 
 </head>
+</head>
 
 <body>
     <section>
-
         <main class="main" id="top">
             <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3 d-block"
                 data-navbar-on-scroll="data-navbar-on-scroll">
@@ -70,7 +73,6 @@
                     </div>
                 </div>
             </nav>
-    <section>
         <div class="tracking-info">
             <div class="shippers-info">
                 <h1>Sender's Information</h1>
