--- a/tracking-page.html
+++ b/tracking-page.html
@@ -110,7 +110,7 @@
     </section>
     <section class="py-0 bg-1000">
 
-        <div class="container">
+        <div class="container" style="margin-top: 10%;">
             <div class="row justify-content-md-between justify-content-evenly py-4">
                 <div class="col-12 col-sm-8 col-md-6 col-lg-auto text-center text-md-start">
                     <p class="fs--1 my-2 fw-bold text-200">All rights Reserved &copy; Rapid Parcel, 2024</p>
