--- a/tracking-page.html
+++ b/tracking-page.html
@@ -47,10 +47,10 @@
                     <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0"
                         id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base">
-                            <li class="nav-item px-2"><a class="nav-link" aria-current="page" href="index.html">Home</a>
+                            <li class="nav-item px-2"><a class="nav-link" aria-current="page" href="/index.html">Home</a>
                             </li>
                             <li class="nav-item px-2"><a class="nav-link" href="#services">Our Services</a></li>
-                            <li class="nav-item px-2"><a class="nav-link" href="/public/track.html">Track</a></li>
+                            <li class="nav-item px-2"><a class="nav-link" href="/track.html">Track</a></li>
                             <li class="nav-item px-2"><a class="nav-link" href="#findUs">Find Us</a></li>
                         </ul>
                         <div class="dropdown d-none d-lg-block">
