--- a/track.html
+++ b/track.html
@@ -210,7 +210,7 @@
                 var inputNumber = parseInt(document.getElementById("fname").value);
 
                 // Check if the input is the particular number
-                if (inputNumber === 456789109) {
+                if (inputNumber === 123456) {
                     // If it matches, submit the form
                     this.submit();
                 } else {
@@ -225,7 +225,7 @@
                 var inputNumber = parseInt(this.value);
 
                 // Enable/disable the submit button based on the input
-                if (inputNumber === 456789109) {
+                if (inputNumber === 123456) {
                     document.getElementById("track-btn").disabled = false;
                 } else {
                     document.getElementById("track-btn").disabled = true;
