--- a/tracking-page.html
+++ b/tracking-page.html
@@ -76,18 +76,18 @@
         <div class="tracking-info">
             <div class="shippers-info">
                 <h1>Sender's Information</h1>
-                <p>Grupo Security Firm</p>
+                <p>Security Firm</p>
                 <p>Poligono Industrial Saprelorca, Av. Rio Jucar, Parcela Ñ-1, 30817 Lorca, Murcia, Spain</p>
-                <p>+34869743681</p>
-                <p>gruposecurity@outlook.com</p>
+                <p>+2347-8112002</p>
+                <p>security@outlook.com</p>
 
             </div>
             <div class="receiver-info">
                 <h1>Receiver's Information</h1>
-                <p>Jose P Hernandez</p>
-                <p>4486, Timber Ridge Ct, Joliet, IL 60431-1707</p>
-                <p>+1708-200-1588</p>
-                <p>joeh3519@yahoo.com</p>
+                <p>Jose P </p>
+                <p>4486, Gergia.ng</p>
+                <p>+1700000000</p>
+                <p>joeg@yahoo.com</p>
             </div>
         </div>
     </section>
@@ -95,7 +95,7 @@
         <div class="tracking-infos">
             <div class="shippers-info">
                 <h1>Destination</h1>
-                <p>Joliet, IL US</p>
+                <p>Denva, CO US</p>
 
             </div>
             <div class="receiver-info">
