--- a/tracking-page.html
+++ b/tracking-page.html
@@ -38,8 +38,8 @@
         <main class="main" id="top">
             <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3 d-block"
                 data-navbar-on-scroll="data-navbar-on-scroll">
-                <div class="container"><a class="navbar-brand" href="index.html"><img
-                            src="/public/assets/img/logo-2.png" height="45" width="40%" alt="logo" /></a>
+                <div class="container" ><a class="navbar-brand" href="index.html"><img
+                            src="/public/assets/img/logo-2.png" id="hide-mobile" height="45" width="40%" alt="logo" /></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon">
